--- a/src/scss/base/_vars.scss
+++ b/src/scss/base/_vars.scss
@@ -8,10 +8,10 @@
 	--font-third: "SimpleTags", sans-serif;
 	--font-titles: var(--font-accent);
 
-	--page-bg: #FFF;
+	--page-bg: #2D411E;
 	--text-color-light: #fff;
 	--text-color-dark: #0f0f0f;
-	--accent: #F9902F;
+	--accent: #587B3F;
 	--accent-dark: #2400c9;
 	--accent-light: #DDFD01;
 	--link-color: #7C0000;
