--- a/src/scss/blocks/_nav.scss
+++ b/src/scss/blocks/_nav.scss
@@ -5,6 +5,7 @@
 
 	&-right {
 		justify-content: flex-end;
+		margin-left: -10%;
 	}
 }
 
@@ -13,7 +14,7 @@
 	z-index: 3;
 	display: flex;
 	font-size: 18px;
-	height: 65px;
+	height: 36px;
 
 	@include tablet {
 		display: none;
@@ -35,24 +36,23 @@
 	font-size: 16px;
 	line-height: 100%;
 	letter-spacing: -0.04em;
-	color: var(--text-color-dark);
+	color: #fff;
+	color: var(--text-color-light);
 
 	&::after {
 		content: "";
 		position: absolute;
-		bottom: -5px;
+		bottom: -4px;
 		left: 50%;
 		transform: translateX(-50%) scale(0);
-		width: 5px;
-		height: 5px;
-		background-color: var(--accent-dark);
+		width: 100%;
+		height: 1px;
+		background-color: var(--text-color-light);
 		opacity: 0;
 		transition: all 0.2s ease-in;
 	}
 
 	&:hover {
-		color: blue;
-
 		&::after {
 			transform: translateX(-50%) scale(1);
 			opacity: 1;
@@ -70,20 +70,23 @@
 	font-weight: 500;
 	font-size: 16px;
 	line-height: 100%;
-	text-transform: uppercase;
-	height: 40px;
-	color: var(--text-color);
+	letter-spacing: -0.04em;
+	line-height: 100%;
+	height: 36px;
+	color: var(--text-color-light);
 	padding: 5px 10px;
 	width: 100%;
-	width: 250px;
-	border: 1px solid var(--text-color);
+	width: 300px;
+	border-radius: 10px;
+	border: 1px solid var(--text-color-light);
+	transition: all 0.2s ease-in;
 
 	&-text {
 		line-height: normal;
 	}
 
 	&:hover {
-		background-color: var(--page-bg);
+		background-color: var(--text-color-light);
 		color: var(--text-color-dark);
 	}
 
@@ -96,7 +99,6 @@
 	transition: all 0.2s ease-in;
 	position: relative;
 
-	font-family: var(--font-second);
 	font-weight: 400;
 	font-size: 65px;
 	line-height: 100%;
