--- a/src/scss/blocks/_mobile-nav.scss
+++ b/src/scss/blocks/_mobile-nav.scss
@@ -1,10 +1,9 @@
 .mobile-nav {
 	position: fixed;
-	top: 50%;
+	top: 96px;
 	right: -150%;
-	width: 100%;
-	height: 100%;
-	transform: translate(0%, -50%);
+	width: calc(100% - 20px);
+	height: calc(100vh - 106px);
 	z-index: 90;
 
 	padding: 40px 10px;
@@ -13,17 +12,14 @@
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	background: var(--accent-light);
+	background: var(--accent);
 	transition: all 0.2s ease-in;
+	border-radius: 20px;
 
 	.border_wrapper {
 		width: 100%;
 		max-width: 100%;
 		margin-bottom: 40px;
-	}
-
-	&__skate {
-		margin: 0 auto;
 	}
 }
 
@@ -43,7 +39,7 @@
 }
 
 .mobile-nav--open {
-	right: 0;
+	right: 10px;
 }
 
 .mobile-nav li {
