--- a/src/scss/blocks/_nav-icon.scss
+++ b/src/scss/blocks/_nav-icon.scss
@@ -2,7 +2,7 @@
 .mobile-nav-btn {
 	--time: 0.1s;
 
-	--width: 40px;
+	--width: 30px;
 	--height: 20px;
 
 	--line-height: 2px;
@@ -10,6 +10,8 @@
 
 	--color: var(--accent-dark);
 	--radius: 0px;
+
+	cursor: pointer;
 
 	/* Fixed height and width */
 	/* height: var(--height); */
@@ -27,7 +29,7 @@
 .nav-icon {
 	position: relative;
 	width: var(--width);
-	background-color: var(--text-color-dark);
+	background-color: var(--text-color-light);
 	height: var(--line-height);
 	border-radius: var(--radius);
 }
@@ -44,19 +46,24 @@
 	height: var(--line-height);
 
 	border-radius: var(--radius);
-	background-color: var(--text-color-dark);
+	background-color: var(--text-color-light);
 	transition: transform var(--time) ease-in,
 		top var(--time) linear var(--time);
 }
 
 .nav-icon::before {
-	/* top: calc(var(--line-height) * -2); */
 	top: calc(-1 * (var(--line-height) + var(--spacing)));
+	width: 100%;
+	width: 40px;
+	left: unset;
+	right: 0;
 }
 
 .nav-icon::after {
-	/* top: calc(var(--line-height) * 2); */
 	top: calc(var(--line-height) + var(--spacing));
+	width: 20px;
+	left: unset;
+	right: 0;
 }
 
 .nav-icon.nav-icon--active {
@@ -66,9 +73,10 @@
 .nav-icon.nav-icon--active::before,
 .nav-icon.nav-icon--active::after {
 	top: 0;
-	background-color: var(--text-color-dark);
+	background-color: var(--text-color-light);
 	transition: top var(--time) linear,
 		transform var(--time) ease-in var(--time);
+	width: 40px;
 }
 
 .nav-icon.nav-icon--active::before {
