--- a/src/scss/blocks/_mobile-nav.scss
+++ b/src/scss/blocks/_mobile-nav.scss
@@ -1,17 +1,15 @@
 .mobile-nav {
 	position: fixed;
-	top: 96px;
+	top: 80px;
 	right: -150%;
 	width: calc(100% - 20px);
 	height: calc(100vh - 106px);
-	z-index: 90;
+	z-index: 99;
 
-	padding: 40px 10px;
+	padding: 40px 30px;
 
 	display: flex;
 	flex-direction: column;
-	align-items: center;
-	justify-content: center;
 	background: var(--accent);
 	transition: all 0.2s ease-in;
 	border-radius: 20px;
@@ -19,7 +17,12 @@
 	.border_wrapper {
 		width: 100%;
 		max-width: 100%;
-		margin-bottom: 40px;
+	}
+
+	@include mobile {
+		top: 60px;
+		height: 92%;
+		padding: 40px 15px;
 	}
 }
 
@@ -29,7 +32,7 @@
 	top: 0px;
 	width: 100vw;
 	height: 100vh;
-	background-color: rgba(0, 0, 0, 0.7);
+	background-color: var(--page-bg);
 	z-index: 95;
 	display: none;
 }
@@ -45,8 +48,6 @@
 .mobile-nav li {
 	width: 100%;
 	display: flex;
-	align-items: center;
-	justify-content: center;
 
 	&:first-child {
 		border-top: none;
@@ -65,8 +66,8 @@
 	width: 100%;
 	display: flex;
 	flex-direction: column;
-	align-items: center;
-	margin-top: 80px;
+	gap: 20px;
+	text-align: left;
 	// border: 1px solid rgba(255, 255, 255, 0.3);
 
 	// & li:first-child {
