--- a/src/scss/base/_vars.scss
+++ b/src/scss/base/_vars.scss
@@ -13,7 +13,7 @@
 	--text-color-dark: #0f0f0f;
 	--accent: #587B3F;
 	--accent-dark: #2400c9;
-	--accent-light: #DDFD01;
+	--accent-light: #9FDD73;
 	--link-color: #7C0000;
 
 
