--- a/src/scss/blocks/_buttons.scss
+++ b/src/scss/blocks/_buttons.scss
@@ -16,13 +16,15 @@
 	line-height: 100%;
 	height: 40px;
 	text-transform: uppercase;
-	background-color: var(--accent-dark);
+	background-color: var(--accent);
 	color: var(--text-color-light);
 	--btn-spark: var(--accent-dark);
+	border-radius: 10px;
 	transition: all 0.2s ease-in;
 
 	&:hover {
-		transform: translateY(-1px);
+		background-color: var(--text-color-light);
+		color: var(--text-color-dark);
 	}
 
 	@include mobile {
