--- a/src/scss/blocks/_lines.scss
+++ b/src/scss/blocks/_lines.scss
@@ -2,6 +2,7 @@
 	position: relative;
 	overflow: hidden;
 	z-index: 9;
+	margin-bottom: 8%;
 
 	&_container {
 		display: flex;
@@ -20,7 +21,6 @@
 		gap: 40px;
 		display: flex;
 		flex-direction: column;
-		padding: 40px 0;
 
 		@include mobile {
 			gap: 20px;
