--- a/src/scss/blocks/_buttons.scss
+++ b/src/scss/blocks/_buttons.scss
@@ -15,7 +15,7 @@
 	font-size: 16px;
 	line-height: 100%;
 	height: 40px;
-	text-transform: uppercase;
+	// text-transform: uppercase;
 	background-color: var(--accent);
 	color: var(--text-color-light);
 	--btn-spark: var(--accent-dark);
