--- a/src/scss/blocks/_buttons.scss
+++ b/src/scss/blocks/_buttons.scss
@@ -1,8 +1,6 @@
 .main__button {
 	position: relative;
-	/* якорь для искр */
-	isolation: isolate;
-	overflow: visible;
+	z-index: 10;
 
 	cursor: pointer;
 	display: flex;
