--- a/src/scss/blocks/_hero.scss
+++ b/src/scss/blocks/_hero.scss
@@ -6,37 +6,23 @@
 	width: calc(100% - 80px);
 	max-width: 1520px;
 	background-color: var(--accent);
-	padding: 0 40px;
+	padding: 30px 20px;
 	border-radius: 50px;
 	height: 826px;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	justify-content: center;
 
 	@include mobile {
 		width: calc(100% - 20px);
 		height: 508px;
 		justify-content: start;
-		padding: 30px 20px;
 		border-radius: 20px;
 	}
 
-	&::after {
-		content: '';
-		z-index: 1;
-		position: absolute;
-		bottom: -112%;
-		left: 50%;
-		transform: translate(-50%, 0%);
-		border-radius: 1000px;
-		width: 100%;
-		max-width: 767px;
-		height: 200%;
-		background-color: var(--accent-light);
-
+	& .main__button {
 		@include mobile {
-			bottom: -120%;
+			max-width: calc(100% - 20px);
 		}
 	}
 
@@ -51,11 +37,12 @@
 
 	&__tips {
 		position: relative;
-		z-index: 10;
+		z-index: 11;
 		display: flex;
 		justify-content: space-between;
 		width: 100%;
 		max-width: 767px;
+		margin-top: 210px;
 
 		font-weight: 500;
 		font-size: 20px;
@@ -66,6 +53,7 @@
 
 		@include mobile {
 			font-size: 16px;
+			margin-top: 0;
 		}
 
 		&__wrapper {
@@ -75,15 +63,6 @@
 
 		&__wrapper:last-child {
 			text-align: right;
-		}
-	}
-
-	&__lines {
-		display: flex;
-
-		@include mobile {
-			margin: 40px auto;
-			margin-bottom: 20px;
 		}
 	}
 
@@ -101,15 +80,34 @@
 	&__content {
 		position: absolute;
 		bottom: 0px;
-		padding-bottom: 30px;
 		left: 50%;
 		transform: translate(-50%, 0%);
 		z-index: 10;
 		padding: 10px;
+		padding-bottom: 30px;
 
 		@include mobile {
 			width: 100%;
+			padding: 0;
 			padding-bottom: 25px;
+		}
+
+		&::after {
+			content: "";
+			z-index: -1;
+			position: absolute;
+			bottom: -450px;
+			left: 50%;
+			transform: translate(-50%, 0%);
+			border-radius: 1000px;
+			width: 100%;
+			max-width: 767px;
+			height: 1170px;
+			background-color: var(--accent-light);
+
+			@include mobile {
+				bottom: -760px;
+			}
 		}
 	}
 
@@ -119,6 +117,7 @@
 		left: 50%;
 		transform: translateX(-50%);
 		min-width: 721px;
+		z-index: 10;
 
 		@include mobile {
 			bottom: 0;
@@ -150,6 +149,8 @@
 	}
 
 	&__text {
+		position: relative;
+		z-index: 10;
 		font-weight: 500;
 		font-size: 16px;
 		line-height: 110%;
@@ -177,6 +178,11 @@
 			left: 10%;
 			width: 173px;
 			transform: rotate(15deg);
+
+			@include mobile {
+				left: 39%;
+				width: 33px;
+			}
 		}
 
 		&-2 {
@@ -184,6 +190,12 @@
 			right: 8%;
 			width: 147px;
 			transform: rotate(-15deg);
+
+			@include mobile {
+				width: 25px;
+				top: 12%;
+				right: 39%;
+			}
 		}
 
 		&-3 {
