--- a/src/scss/blocks/_titles.scss
+++ b/src/scss/blocks/_titles.scss
@@ -1,23 +1,31 @@
 .title__wrapper {
 	display: grid;
 	grid-template-columns: repeat(4, 1fr);
-	margin-bottom: 40px;
+	// margin-bottom: 40px;
 
 	@include mobile {
 		grid-template-columns: repeat(1, 1fr);
-		margin-bottom: 20px;
+		// margin-bottom: 20px;
 	}
 }
 
 .title {
 	grid-column: 3 / -1;
 	position: relative;
-	font-weight: 600;
+	font-weight: 400;
 	font-size: 16px;
 	line-height: 110%;
 	letter-spacing: -0.04em;
-	color: var(--text-color-dark);
+	color: var(--text-color-light);
 	// white-space: nowrap;
+
+	&-bold {
+		font-weight: 600;
+		font-size: 20px;
+		line-height: 120%;
+		letter-spacing: -0.04em;
+		text-transform: uppercase;
+	}
 
 	@include mobile {
 		text-align: left;
@@ -28,16 +36,29 @@
 }
 
 .subtitle {
-	grid-column: 1 / 2;
-	white-space: nowrap;
+	grid-column: 1 / 3;
+	display: grid;
+	grid-template-columns: 28px 1fr;
+	gap: 10px;
 
-	& span {
+	& img {
+		grid-column: 1;
+		grid-row: 1;
+		width: 28px;
+		height: 28px;
+		margin-top: 10px;
+	}
+
+	& h2 {
+		grid-column: 2;
+		grid-row: 1;
 		display: inline-block;
-		font-weight: 400;
-		font-size: 70px;
-		line-height: 70%;
+		font-weight: 600;
+		font-size: 50px;
+		line-height: 100%;
+		letter-spacing: -0.04em;
 		text-transform: uppercase;
-		color: #0f0f0f;
+		color: var(--text-color-light);
 		// border-radius: 100%;
 		// background: rgba(255, 255, 255, 0.3);
 
