--- a/src/scss/blocks/_about.scss
+++ b/src/scss/blocks/_about.scss
@@ -4,76 +4,88 @@
 	max-width: 1520px;
 	margin: 0 auto;
 	background-color: var(--accent);
-	padding: 30px 20px;
+	padding: 60px 0;
 	border-radius: 50px;
 
-	&__content {
-		display: flex;
-		justify-content: space-between;
-		background-color: #f6f6f6;
-		border: 1px solid rgba(15, 15, 15, 0.3);
-		border-radius: 5px;
+	@include mobile {
+		width: calc(100% - 20px);
+		padding: 45px 10px;
+		border-radius: 20px;
+	}
+
+	&__cards {
+		margin-top: 40px;
+		display: grid;
+		grid-template-columns: repeat(4, 1fr);
+
+		@include tablet {
+			grid-template-columns: repeat(2, 1fr);
+		}
 
 		@include mobile {
-			flex-direction: column;
-			padding: 0px;
-			gap: 15px;
+			grid-template-columns: repeat(1, 1fr);
+			margin-top: 15px;
+			gap: 20px;
 		}
+	}
+
+	&__card {
+		display: flex;
+		flex-direction: column;
 
 		&__img {
-			width: 50%;
-			max-width: 760px;
-			border-radius: 5px;
-			padding: 30px;
+			grid-column: 1;
+			width: 100%;
+			max-width: 100%;
+		}
+
+		&__title {
+			font-weight: 500;
+			font-size: 18px;
+			line-height: 100%;
+			letter-spacing: -0.04em;
+			text-transform: uppercase;
+			color: var(--text-color-light);
+			margin-top: 15px;
+			margin-bottom: 20px;
 
 			@include mobile {
-				width: 100%;
-				padding: 15px;
-				padding-bottom: 0;
+				font-size: 16px;
+				margin-top: 10px;
+				margin-bottom: 15px;
 			}
 		}
 
-		&__text {
-			display: flex;
-			flex-direction: column;
-			justify-content: space-between;
-			width: 50%;
-			padding: 30px;
-			border-left: 1px solid rgba(15, 15, 15, 0.3);
+		&__description {
+			font-weight: 400;
+			font-size: 16px;
+			line-height: 110%;
+			letter-spacing: -0.04em;
+			color: rgba(255, 255, 255, 0.8);
+			max-width: 260px;
 
 			@include mobile {
-				border-left: none;
-				border-top: 1px solid rgba(15, 15, 15, 0.3);
-				padding-top: 15px;
-				width: 100%;
-				padding: 15px;
+				font-size: 14px;
 			}
+		}
+	}
 
-			&-title {
-				max-width: 559px;
-				font-weight: 400;
-				font-size: 30px;
-				line-height: 80%;
-				color: var(--text-color-dark);
-				margin-bottom: 10px;
+	&__card:first-child {
+		padding-left: 25px;
 
-				@include mobile {
-					font-size: 18px;
-				}
-			}
+		@include mobile {
+			padding-left: 0;
+		}
+	}
 
-			&-description {
-				font-weight: 400;
-				font-size: 16px;
-				line-height: 110%;
-				letter-spacing: -0.04em;
-				color: rgba(15, 15, 15, 0.8);
-				max-width: 487px;
+	&__card:nth-child(3) {
 
-				@include mobile {
-					font-size: 14px;
-				}
-			}
+		@include tablet {
+			padding-left: 25px;
+		}
+
+		@include mobile {
+			padding-left: 0;
 		}
 	}
 }
