--- a/src/scss/blocks/_titles.scss
+++ b/src/scss/blocks/_titles.scss
@@ -17,6 +17,7 @@
 	line-height: 110%;
 	letter-spacing: -0.04em;
 	color: var(--text-color-light);
+	margin-right: 25px;
 	// white-space: nowrap;
 
 	&-bold {
@@ -29,6 +30,7 @@
 
 	@include mobile {
 		text-align: left;
+		margin-top: 20px;
 		font-size: 14px;
 		grid-column: 1;
 		grid-row: 2;
@@ -37,9 +39,16 @@
 
 .subtitle {
 	grid-column: 1 / 3;
+	margin-left: 25px;
 	display: grid;
 	grid-template-columns: 28px 1fr;
 	gap: 10px;
+
+	@include mobile {
+		display: flex;
+		align-items: flex-start;
+		margin: 0;
+	}
 
 	& img {
 		grid-column: 1;
@@ -47,6 +56,10 @@
 		width: 28px;
 		height: 28px;
 		margin-top: 10px;
+
+		@include mobile {
+			margin-top: 0px;
+		}
 	}
 
 	& h2 {
@@ -63,8 +76,7 @@
 		// background: rgba(255, 255, 255, 0.3);
 
 		@include mobile {
-			font-size: 30px;
-			margin-bottom: 20px;
+			font-size: 25px;
 			grid-column: 1;
 			grid-row: 1;
 		}
