--- a/src/scss/blocks/_benefits.scss
+++ b/src/scss/blocks/_benefits.scss
@@ -6,6 +6,12 @@
 	padding: 60px 25px;
 	border-radius: 50px;
 
+	@include mobile {
+		width: calc(100% - 20px);
+		padding: 45px 10px;
+		border-radius: 20px;
+	}
+
 	& .subtitle {
 		margin: 0;
 	}
@@ -24,6 +30,11 @@
 			flex-direction: column;
 			width: 50%;
 			gap: 20px;
+
+			@include mobile {
+				width: 100%;
+				gap: 10px;
+			}
 		}
 
 		&__img {
@@ -34,6 +45,8 @@
 
 			@include mobile {
 				width: 100%;
+				padding: 0;
+				margin-bottom: 20px;
 			}
 		}
 
@@ -46,8 +59,8 @@
 			border-radius: 30px;
 
 			@include mobile {
-				border-left: none;
 				padding-top: 15px;
+				border-radius: 15px;
 				width: 100%;
 				padding: 15px;
 			}
@@ -63,7 +76,8 @@
 				margin-bottom: 20px;
 
 				@include mobile {
-					font-size: 18px;
+					font-size: 14px;
+					margin-bottom: 10px;
 				}
 			}
 
@@ -87,17 +101,23 @@
 		grid-template-columns: repeat(4, 1fr);
 
 		& .text {
-			grid-column: 3;
+			grid-column: 1 / -1;
 			font-weight: 400;
 			font-size: 16px;
 			line-height: 110%;
 			letter-spacing: -0.04em;
 			color: rgba(255, 255, 255, 0.8);
 			margin-bottom: 30px;
-			max-width: 250px;
+			max-width: 500px;
 
 			@media (max-width: 1570px) {
 				margin-top: 30px;
+			}
+
+			@include mobile {
+				margin-top: 15px;
+				margin-bottom: 20px;
+				font-size: 14px;
 			}
 		}
 	}
