--- a/src/scss/base/_sticky-footer.scss
+++ b/src/scss/base/_sticky-footer.scss
@@ -10,6 +10,7 @@ body {
 }
 
 .footer {
-    padding: 60px 0;
+    // padding: 60px 0;
+    padding-bottom: 40px;
     background-color: #e3e3e3;
 }
