--- a/src/scss/blocks/_benefits.scss
+++ b/src/scss/blocks/_benefits.scss
@@ -101,7 +101,7 @@
 		grid-template-columns: repeat(4, 1fr);
 
 		& .text {
-			grid-column: 1 / -1;
+			grid-column: 3;
 			font-weight: 400;
 			font-size: 16px;
 			line-height: 110%;
@@ -115,6 +115,7 @@
 			}
 
 			@include mobile {
+				grid-column: 1 / -1;
 				margin-top: 15px;
 				margin-bottom: 20px;
 				font-size: 14px;
