--- a/src/scss/base/_sticky-footer.scss
+++ b/src/scss/base/_sticky-footer.scss
@@ -13,4 +13,8 @@ body {
     // padding: 60px 0;
     padding-bottom: 40px;
     background-color: #e3e3e3;
+
+    @include tablet_small {
+        padding-bottom: 20px;
+    }
 }
