--- a/src/scss/blocks/_footer.scss
+++ b/src/scss/blocks/_footer.scss
@@ -34,8 +34,9 @@
 
 	&__logo-dog {
 		grid-column: 2 / 4;
+		grid-row: 1 / 2;
 		margin: 0 auto;
-		margin-bottom: 40px;
+		margin-bottom: -10px;
 
 		@include tablet_small {
 			grid-column: 1 / -1;
@@ -72,17 +73,20 @@
 			content: "";
 			position: absolute;
 			bottom: -4px;
-			left: 0;
+			left: 50%;
+			transform: translateX(-50%) scale(0);
 			width: 100%;
-			height: 2px;
+			height: 1px;
 			background-color: var(--text-color-light);
-			transform: scaleX(0);
-			transform-origin: left center;
-			transition: transform 0.3s ease-in-out;
+			opacity: 0;
+			transition: all 0.2s ease-in;
 		}
 
-		&:hover::after {
-			transform: scaleX(1);
+		&:hover {
+			&::after {
+				transform: translateX(-50%) scale(1);
+				opacity: 1;
+			}
 		}
 	}
 
@@ -91,6 +95,7 @@
 
 		&__main {
 			grid-column: 1 / 3;
+			grid-row: 1;
 			display: flex;
 			gap: 30px;
 			padding-left: 25px;
@@ -190,17 +195,20 @@
 				content: "";
 				position: absolute;
 				bottom: -4px;
-				left: 0;
+				left: 50%;
+				transform: translateX(-50%) scale(0);
 				width: 100%;
-				height: 2px;
+				height: 1px;
 				background-color: rgba(255, 255, 255, 0.5);
-				transform: scaleX(0);
-				transform-origin: left center;
-				transition: transform 0.3s ease-in-out;
+				opacity: 0;
+				transition: all 0.2s ease-in;
 			}
 
-			&:hover::after {
-				transform: scaleX(1);
+			&:hover {
+				&::after {
+					transform: translateX(-50%) scale(1);
+					opacity: 1;
+				}
 			}
 		}
 
