--- a/src/scss/blocks/_how.scss
+++ b/src/scss/blocks/_how.scss
@@ -5,6 +5,7 @@
 	background-color: var(--accent);
 	padding: 60px 25px;
 	border-radius: 50px;
+	overflow: hidden;
 
 	@include mobile {
 		width: calc(100% - 20px);
@@ -13,6 +14,7 @@
 	}
 
 	&__cards {
+		position: relative;
 		display: flex;
 		align-items: center;
 		justify-content: center;
@@ -26,6 +28,8 @@
 	}
 
 	.how__card {
+		position: relative;
+		z-index: 10;
 		margin-top: 70px;
 		display: flex;
 		flex-direction: column;
@@ -61,5 +65,62 @@
 
 	.how__card:nth-child(2) {
 		margin-top: 30px;
+	}
+
+	.how__bone {
+		position: absolute;
+		width: 110px;
+
+		&-1 {
+			top: 60%;
+			left: -2%;
+			transform: rotate(50deg);
+		}
+
+		&-2 {
+			top: 40%;
+			left: 4%;
+			transform: rotate(-20deg);
+		}
+
+		&-3 {
+			top: 70%;
+			left: 10%;
+			transform: rotate(30deg);
+		}
+
+		&-4 {
+			z-index: 11;
+			top: 30%;
+			left: 28%;
+			transform: rotate(20deg);
+		}
+
+		&-5 {
+			z-index: 11;
+			top: 50%;
+			left: 34%;
+			transform: rotate(-30deg);
+		}
+
+		&-6 {
+			top: 77%;
+			left: 31%;
+			transform: rotate(20deg);
+		}
+
+		&-7 {
+			z-index: 11;
+			top: 30%;
+			left: 57%;
+			transform: rotate(30deg);
+		}
+
+		&-8 {
+			z-index: 11;
+			top: 70%;
+			left: 61%;
+			transform: rotate(-20deg);
+		}
 	}
 }
