--- a/src/scss/blocks/_how.scss
+++ b/src/scss/blocks/_how.scss
@@ -122,5 +122,23 @@
 			left: 61%;
 			transform: rotate(-20deg);
 		}
+
+		&-9 {
+			top: 30%;
+			left: 82%;
+			transform: rotate(30deg);
+		}
+
+		&-10 {
+			top: 55%;
+			left: 84%;
+			transform: rotate(-10deg);
+		}
+
+		&-11 {
+			top: 62%;
+			left: 93%;
+			transform: rotate(20deg);
+		}
 	}
 }
