--- a/src/scss/blocks/_how.scss
+++ b/src/scss/blocks/_how.scss
@@ -22,8 +22,10 @@
 		border-radius: 5px;
 		padding: 0 25px;
 
-		@include mobile {
+		@include tablet_small {
 			flex-direction: column;
+			margin-top: 20px;
+			gap: 10px;
 		}
 	}
 
@@ -43,6 +45,17 @@
 		border-radius: 100%;
 		background: radial-gradient(102.32% 102.32% at 50.01% 50%, rgb(61, 88, 40) 0%, rgb(45, 65, 30) 100%);
 
+		@include tablet {
+			width: 240px;
+			min-width: 240px;
+			height: 240px;
+			min-height: 240px;
+		}
+
+		@include tablet_small {
+			margin: 0;
+		}
+
 		&-title {
 			font-weight: 500;
 			font-size: 18px;
@@ -50,6 +63,10 @@
 			letter-spacing: -0.04em;
 			text-transform: uppercase;
 			color: var(--text-color-light);
+
+			@include tablet {
+				font-size: 14px;
+			}
 		}
 
 		&-description {
@@ -60,11 +77,20 @@
 			text-align: center;
 			color: rgba(255, 255, 255, 0.8);
 			max-width: 210px;
+
+			@include tablet {
+				font-size: 14px;
+				max-width: 203px;
+			}
 		}
 	}
 
 	.how__card:nth-child(2) {
 		margin-top: 30px;
+
+		@include tablet_small {
+			margin-top: 0px;
+		}
 	}
 
 	.how__bone {
@@ -94,6 +120,10 @@
 			top: 30%;
 			left: 28%;
 			transform: rotate(20deg);
+
+			@include tablet {
+				z-index: 0;
+			}
 		}
 
 		&-5 {
@@ -101,6 +131,10 @@
 			top: 50%;
 			left: 34%;
 			transform: rotate(-30deg);
+
+			@include tablet {
+				z-index: 0;
+			}
 		}
 
 		&-6 {
@@ -114,6 +148,10 @@
 			top: 30%;
 			left: 57%;
 			transform: rotate(30deg);
+
+			@include tablet {
+				z-index: 0;
+			}
 		}
 
 		&-8 {
@@ -121,6 +159,10 @@
 			top: 70%;
 			left: 61%;
 			transform: rotate(-20deg);
+
+			@include tablet {
+				z-index: 0;
+			}
 		}
 
 		&-9 {
