--- a/src/scss/blocks/_how.scss
+++ b/src/scss/blocks/_how.scss
@@ -63,7 +63,28 @@
 			min-height: 280px;
 		}
 
+		&::after {
+			content: "";
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			transform: translate(-50%, -50%);
+			width: 100%;
+			height: 100%;
+			gap: 20px;
+			border-radius: 100%;
+			background: radial-gradient(102.32% 102.32% at 50.01% 50%, rgb(61, 88, 40) 0%, rgb(45, 65, 30) 100%);
+			display: none;
+			z-index: 1;
+
+			@include tablet_small {
+				display: block;
+			}
+		}
+
 		&-title {
+			position: relative;
+			z-index: 20;
 			font-weight: 500;
 			font-size: 18px;
 			line-height: 100%;
@@ -77,6 +98,8 @@
 		}
 
 		&-description {
+			position: relative;
+			z-index: 20;
 			font-weight: 400;
 			font-size: 16px;
 			line-height: 110%;
@@ -92,6 +115,10 @@
 		}
 	}
 
+	.how__card {
+		position: relative;
+	}
+
 	.how__card:nth-child(2) {
 		margin-top: 30px;
 
@@ -103,6 +130,10 @@
 	.how__bone {
 		position: absolute;
 		width: 110px;
+
+		@include tablet_small {
+			display: none;
+		}
 
 		&-1 {
 			top: 60%;
@@ -196,6 +227,89 @@
 				top: 5%;
 				left: -14%;
 				transform: rotate(-30deg);
+			}
+		}
+	}
+
+	.how__card_bone {
+		position: absolute;
+		width: 95px;
+
+
+		&-1 {
+			&-1 {
+				z-index: 3;
+				top: 15%;
+				left: -10%;
+				transform: rotate(-30deg);
+			}
+
+			&-2 {
+				z-index: 3;
+				top: 5%;
+				left: 70%;
+				transform: rotate(15deg);
+			}
+
+			&-3 {
+				z-index: 0;
+				top: 87%;
+				left: 0%;
+				transform: rotate(30deg);
+			}
+
+			&-4 {
+				z-index: 0;
+				top: 82%;
+				left: 82%;
+				transform: rotate(10deg);
+			}
+		}
+
+
+		&-2 {
+			&-1 {
+				z-index: 3;
+				top: 3%;
+				left: 60%;
+				transform: rotate(30deg);
+			}
+
+			&-2 {
+				z-index: 3;
+				top: 30%;
+				left: -20%;
+				transform: rotate(-30deg);
+			}
+
+			&-3 {
+				z-index: 0;
+				top: 97%;
+				left: 67%;
+				transform: rotate(30deg);
+			}
+		}
+
+		&-3 {
+			&-1 {
+				z-index: 0;
+				top: 5%;
+				left: 0%;
+				transform: rotate(-20deg);
+			}
+
+			&-2 {
+				z-index: 3;
+				top: 70%;
+				left: -18%;
+				transform: rotate(-25deg);
+			}
+
+			&-3 {
+				z-index: 0;
+				top: 80%;
+				left: 73%;
+				transform: rotate(-10deg);
 			}
 		}
 	}
