--- a/src/scss/blocks/_what.scss
+++ b/src/scss/blocks/_what.scss
@@ -76,7 +76,7 @@
 
 			max-width: 508px;
 
-			@include mobile {
+			@include tablet_small {
 				grid-column: 1 / -1;
 				font-size: 14px;
 			}
@@ -124,6 +124,43 @@
 
 		@include tablet_small {
 			display: flex;
+		}
+
+		.what__pet {
+			display: flex;
+			flex-direction: column;
+			opacity: 0.5;
+			transition: all 0.2s ease-in-out;
+			width: 267px;
+
+			&-profile {
+				display: flex;
+			}
+
+			&-img {
+				width: 130px;
+				height: 130px;
+				margin-right: 10px;
+				margin-bottom: 15px;
+			}
+
+			&.active {
+				opacity: 1;
+
+				.what__pet-img {
+					width: 125px;
+					height: 125px;
+					margin-right: 15px;
+				}
+			}
+
+			&-name {
+				font-size: 14px;
+			}
+
+			&-instagram {
+				font-size: 14px;
+			}
 		}
 	}
 }
