--- a/src/scss/blocks/_contacts.scss
+++ b/src/scss/blocks/_contacts.scss
@@ -13,7 +13,7 @@
 	}
 
 	& a {
-		color: var(--text-color-light);
+		color: rgba(255, 255, 255, 0.8);
 	}
 
 	& .subtitle {
@@ -89,7 +89,7 @@
 				line-height: 110%;
 				letter-spacing: -0.04em;
 				color: rgba(255, 255, 255, 0.8);
-				max-width: 454px;
+				max-width: 260px;
 
 				@include mobile {
 					font-size: 14px;
